--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Omar Ignacio Barboza",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "mongoose": "^6.2.10"
   }
 }
