--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Omar Ignacio Barboza",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
